Fetch and display articles from dev.to API

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@ng-icons/core": "^30.3.0",
     "@ng-icons/heroicons": "^30.3.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "marked": "^15.0.0",
+    "ngx-markdown": "^19.1.0",
     "postcss": "^8.5.3",
+    "prismjs": "^1.28.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.0.9",
     "tslib": "^2.3.0",
